<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.casehub</groupId>
    <artifactId>casehub-platform-parent</artifactId>
    <version>0.2-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>platform-api</module>
        <module>agent-api</module>
        <module>platform</module>
        <module>testing</module>
        <module>agent-runtime</module>
        <module>config</module>
        <module>oidc</module>
        <module>expression</module>
        <module>persistence-jpa</module>
        <module>persistence-mongodb</module>
        <module>endpoints-memory</module>
        <module>endpoints-config</module>
        <module>datasource-alpha</module>
        <module>datasource-inmem</module>
        <module>datasource-jpa</module>
        <module>scim</module>
        <module>identity</module>
        <module>agent-claude</module>
        <module>agent-openai</module>
        <module>agent-codex</module>
        <module>agent-gemini</module>
        <module>agent-gemini-cli</module>
        <module>agent-langchain4j</module>
        <module>acl-inmem</module>
        <module>acl-jpa</module>
        <module>acl-admin</module>
        <module>acl-worker</module>
        <module>notifications-inmem</module>
        <module>notifications-jpa</module>
        <module>notifications</module>
        <module>notification-settings-inmem</module>
        <module>notification-settings-jpa</module>
        <module>subscriptions</module>
        <module>subscriptions-inmem</module>
        <module>subscriptions-jpa</module>
        <module>streams-kafka</module>
        <module>streams-amqp</module>
        <module>streams-webhook</module>
        <module>streams-poll</module>
        <module>streams-camel</module>
        <module>governance</module>
        <module>credentials-quarkus</module>
        <module>delivery-channel-inmem</module>
        <module>notification-dispatch</module>
        <module>digest-inmem</module>
        <module>digest-jpa</module>
        <module>delivery-tracking-inmem</module>
        <module>delivery-tracking-jpa</module>
        <module>platform-view</module>
        <module>platform-view-inmem</module>
        <module>platform-view-jpa</module>
        <module>preferences-editor</module>
        <module>agent-router</module>
        <module>agent-gate</module>
        <module>graphql</module>
        <module>graphql-client</module>
        <module>mcp</module>
        <module>callback-api</module>
        <module>callback-inmem</module>
        <module>callback</module>
        <module>graphql-generator</module>
        <module>callback-generator</module>
        <module>callback-client</module>
        <module>yaml-core</module>
        <module>yaml-codegen</module>
        <module>schema-generator</module>
        <module>ts-core</module>
        <module>platform-pdf</module>
        <module>platform-signing</module>
    </modules>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <quarkus.platform.version>3.32.2</quarkus.platform.version>
        <compiler-plugin.version>3.15.0</compiler-plugin.version>
        <jandex-maven-plugin.version>3.3.1</jandex-maven-plugin.version>
        <langchain4j.version>1.14.1</langchain4j.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.casehub</groupId>
                <artifactId>casehub-parent</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.quarkus.platform</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.xerial</groupId>
                <artifactId>sqlite-jdbc</artifactId>
                <version>3.53.1.0</version>
            </dependency>
            <dependency>
                <groupId>com.zaxxer</groupId>
                <artifactId>HikariCP</artifactId>
                <version>7.0.2</version>
            </dependency>
            <dependency>
                <groupId>dev.langchain4j</groupId>
                <artifactId>langchain4j-core</artifactId>
                <version>${langchain4j.version}</version>
            </dependency>
            <dependency>
                <groupId>dev.langchain4j</groupId>
                <artifactId>langchain4j</artifactId>
                <version>${langchain4j.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.openhtmltopdf</groupId>
                <artifactId>openhtmltopdf-pdfbox</artifactId>
                <version>1.1.37</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>casehubio GitHub Packages</name>
            <url>https://maven.pkg.github.com/casehubio/platform</url>
        </repository>
        <snapshotRepository>
            <id>github</id>
            <name>casehubio GitHub Packages</name>
            <url>https://maven.pkg.github.com/casehubio/platform</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>

    <scm>
        <connection>scm:git:https://github.com/casehubio/platform.git</connection>
        <developerConnection>scm:git:https://github.com/casehubio/platform.git</developerConnection>
        <url>https://github.com/casehubio/platform</url>
    </scm>

    <repositories>
        <repository>
            <id>github</id>
            <name>casehubio GitHub Packages</name>
            <url>https://maven.pkg.github.com/casehubio/*</url>
            <snapshots><enabled>true</enabled></snapshots>
        </repository>
        <repository>
            <id>jboss-snapshots</id>
            <name>JBoss Nexus Snapshots</name>
            <url>https://repository.jboss.org/nexus/content/repositories/snapshots/</url>
            <releases><enabled>false</enabled></releases>
            <snapshots><enabled>true</enabled></snapshots>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
                <configuration>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
